--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -9,15 +9,26 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{{#block "title"}}Travel Locations{{/block}}</title>
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-        <!--<link rel="stylesheet" href="/css/main.css">-->
+        <!--<link rel="stylesheet" href="/app.css">-->
     </head>
     <body>
-{{/block}}
-<div class="page">
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <li role="presentation"><a href="/places/new">Add New Place</a></li>
+        <li role="presentation"><a href="/">See All Locations</a></li>
+    </ul>
+    <div class="container">
+        <div class="page-header">
+            <img src="/images/caspar-rubin-224229.jpg" width="70%">
+            <h1>Welcome to the travel page.</h1>
+        </div>
 
-{{#block "content"}}
+        <div class="col-md-12">
+            {{#block "content"}}
+            {{/block}}
 
-
+        </div>
+    </div>
 
 {{/block}}
 
