--- a/src/main/resources/templates/newplaces-form.hbs
+++ b/src/main/resources/templates/newplaces-form.hbs
@@ -1,13 +1,24 @@
 {{#partial "content"}}
 
+    {{#if editPlaces}}
+        <h1>Edit this Post!</h1>
+        <form action="/places/{{editPlaces.id}}/update" method="post">
+            <label for="places">Edit this post's content</label>
+            <input id="places" name="places" type="text" value="{{editPlaces.places}}">
+            <button type="submit" class="btn btn-default">Edit Location!</button>
+        </form>
+    {{else}}
+
     <h1>Add a new Place!</h1>
 
     <form action="/places/new" method="post">
         <label for="places">Post Content</label>
         <input id="places" name="places" type="text">
-
+    {{/if}}
         <button type="submit" class="btn btn-default">Add new place!</button>
     </form>
+
+
 {{/partial}}
 
 {{> layout.hbs}}
