--- a/src/main/resources/templates/place-detail.hbs
+++ b/src/main/resources/templates/place-detail.hbs
@@ -1,8 +1,9 @@
+
 {{#partial "content"}}
     <p>Content:</p>
-    <p>{{ placesYouveBeen.places }}</p>
+    <p>{{ places.places }}</p>
     <h5>Created At:</h5>
-    <p> {{ placesYouveBeen.createdAt }}</p>
+    <p> {{ places.createdAt }}</p>
     <h5>Post status:</h5>
     <p>
         {{#if placesYouveBeen.published }}
@@ -10,6 +11,7 @@
         {{else}}
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Draft
         {{/if}}
+        <a href="/places/{{places.id}}/update">Edit this location</a>
     </p>
 {{/partial}}
 
