add delete function

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -33,7 +33,11 @@
 {{/block}}
 
 {{#block "footer"}}
-    </div>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted"><a href="/posts/delete">DELETE ALL POSTS</a></p>
+        </div>
+    </footer>
     </body>
     </html>
 {{/block}}
