--- a/src/main/resources/templates/place-detail.hbs
+++ b/src/main/resources/templates/place-detail.hbs
@@ -12,6 +12,7 @@
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Draft
         {{/if}}
         <a href="/places/{{places.id}}/update">Edit this location</a>
+        <a href="/places/{{places.id}}/delete">DELETE this post (no undo)</a>
     </p>
 {{/partial}}
 
